--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
+    <string name="app_logo">Logo aplikacije</string>
     <string name="app_name">SportLoc</string>
+    <string name="btn_account">VAŠ RAČUN</string>
+    <string name="btn_facebook">FACEBOOK</string>
+    <string name="btn_google">GOOGLE</string>
+    <string name="tv_login">PRIJAVA:</string>
 </resources>
