--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,17 +3,28 @@
     <string name="app_name">SportLoc</string>
     <string name="btn_account">VAŠ RAČUN</string>
     <string name="btn_facebook">FACEBOOK</string>
+    <string name="btn_female">Žensko</string>
     <string name="btn_google">GOOGLE</string>
     <string name="btn_login">PRIJAVA</string>
+    <string name="btn_male">Muško</string>
+    <string name="btn_registration">REGISTRACIJA</string>
     <string name="toast_empty_pass">Polje za unos lozinke ne smije biti prazno!</string>
+    <string name="toast_empty_registration">Sva polja za registraciju moraju biti popunjena!</string>
     <string name="toast_empty_user">Polje za unos korisničkog imena ne smije biti prazno!</string>
     <string name="toast_empty_user_pass">Polja za unos korisničkog imena i lozinke ne smiju biti prazna!</string>
-    <string name="toast_login_error">Pojavila se nepoznata pogreška prilikom prijave!</string>
+    <string name="toast_error">Pojavila se pogreška! Provjerite internetsku vezu i pokušajte ponovo.</string>
     <string name="toast_login_fail">Unijeli ste pogrešno korisničko ime ili lozinku!</string>
     <string name="toast_login_success">Prijava uspješna</string>
+    <string name="toast_registration_fail">Pojavila se pogreška prilikom registracije!</string>
+    <string name="toast_registration_success">Registracija uspješna</string>
     <string name="tv_forg_pass">Zaboravljena lozinka?</string>
+    <string name="tv_gender">Spol</string>
     <string name="tv_login">PRIJAVA:</string>
     <string name="tv_register">Registrirajte se</string>
+    <string name="txt_birthday">Rođendan (DD.MM.GGGG)</string>
+    <string name="txt_email">E-mail</string>
+    <string name="txt_name">Ime</string>
     <string name="txt_password">Lozinka</string>
+    <string name="txt_surname">Prezime</string>
     <string name="txt_username">Korisničko ime</string>
 </resources>
