--- a/webservice/src/main/res/values/strings.xml
+++ b/webservice/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">webservice</string>
+    <string name="toast_error">Pojavila se pogreška! Provjerite internetsku vezu i pokušajte ponovo.</string>
+    <string name="toast_login_fail">Unijeli ste pogrešno korisničko ime ili lozinku!</string>
+    <string name="toast_login_success">Prijava uspješna</string>
+    <string name="toast_registration_fail">Pojavila se pogreška prilikom registracije!</string>
+    <string name="toast_registration_success">Registracija uspješna</string>
 </resources>
