--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,13 +2,13 @@
     <string name="app_logo">Logo aplikacije</string>
     <string name="app_name">SportLoc</string>
     <string name="btn_account">VAŠ RAČUN</string>
-    <string name="btn_dodaj">DODAJ</string>
+    <string name="btn_add">DODAJ</string>
     <string name="btn_facebook">FACEBOOK</string>
     <string name="btn_female">Žensko</string>
+    <string name="btn_find">PRONAĐI</string>
     <string name="btn_google">GOOGLE</string>
     <string name="btn_login">PRIJAVA</string>
     <string name="btn_male">Muško</string>
-    <string name="btn_pronadi">PRONAĐI</string>
     <string name="btn_registration">REGISTRACIJA</string>
     <string name="btn_send">POŠALJI</string>
     <string name="toast_empty_email">Polje za unos e-mail adrese ne smije biti prazno!</string>
