--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,12 @@
     <string name="toast_empty_email">Polje za unos e-mail adrese ne smije biti prazno!</string>
     <string name="toast_empty_registration">Sva polja za registraciju moraju biti popunjena!</string>
     <string name="toast_empty_user_pass">Polja za unos korisničkog imena i lozinke ne smiju biti prazna!</string>
+    <string name="toast_forg_pass_fail">Pojavila se pogreška prilikom obnavljanja vaše lozinke!</string>
+    <string name="toast_forg_pass_success">Obnavljanje lozinke uspješno</string>
+    <string name="toast_login_fail">Unijeli ste pogrešno korisničko ime ili lozinku!</string>
+    <string name="toast_login_success">Prijava uspješna</string>
+    <string name="toast_registration_fail">Pojavila se pogreška prilikom registracije!</string>
+    <string name="toast_registration_success">Registracija uspješna</string>
     <string name="tv_forg_pass">Zaboravljena lozinka?</string>
     <string name="tv_forg_pass_info">Unesite vašu e-mail adresu kako bismo vam poslali novu lozinku:</string>
     <string name="tv_gender">Spol</string>
