Maknuti testni podaci i testirana aktivnost Uklonjeni su hardcodirani testni podaci i dizajn je testiran te spreman za korištenje. Stringovi su posloženi po abecedi, margine su kao i drugdje u apikaciji stavljene na 16dp. Maknuti komentari za element koji sadrži mapu.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,18 +9,19 @@
     <string name="btn_google">GOOGLE</string>
     <string name="btn_join">Prijavi se</string>
     <string name="btn_leave">Odjavi se</string>
-    <string name="btn_send_request">Pošalji zahtjev</string>
-    <string name="btn_request_sent">Zahtjev poslan</string>
     <string name="btn_login">PRIJAVA</string>
     <string name="btn_male">Muško</string>
     <string name="btn_registration">REGISTRACIJA</string>
+    <string name="btn_request_sent">Zahtjev poslan</string>
     <string name="btn_send">POŠALJI</string>
+    <string name="btn_send_request">Pošalji zahtjev</string>
     <string name="event_details_address">Adresa:</string>
-    <string name="event_details_madeby">Izradio:</string>
     <string name="event_details_date">Datum:</string>
-    <string name="event_details_time">Vrijeme:</string>
     <string name="event_details_description">Opis</string>
+    <string name="event_details_made_by">Izradio:</string>
     <string name="event_details_map">Prikaz na karti</string>
+    <string name="event_details_time">Vrijeme:</string>
+    <string name="ikona_kvacica">Kvačica</string>
     <string name="toast_empty_email">Polje za unos e-mail adrese ne smije biti prazno!</string>
     <string name="toast_empty_registration">Sva polja za registraciju moraju biti popunjena!</string>
     <string name="toast_empty_user_pass">Polja za unos korisničkog imena i lozinke ne smiju biti prazna!</string>
