Event details initial commit
Created new fragment for showing details on selected activities, replaced activity xml design into fragment xml, added google maps into fragment and used databinding to set bean data to be visible in app. Google map is initialy set to zoom onto specified address.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,6 @@
     <string name="txt_password">Lozinka</string>
     <string name="txt_surname">Prezime</string>
     <string name="txt_username">Korisničko ime</string>
+    <string name="title_activity_event_details">Informacije</string>
+
 </resources>
