--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <resources>
     <string name="app_logo">Logo aplikacije</string>
     <string name="app_name">SportLoc</string>
+
     <string name="btn_account">VAŠ RAČUN</string>
     <string name="btn_add">DODAJ</string>
     <string name="btn_facebook">FACEBOOK</string>
@@ -15,13 +17,19 @@
     <string name="btn_request_sent">Zahtjev poslan</string>
     <string name="btn_send">POŠALJI</string>
     <string name="btn_send_request">Pošalji zahtjev</string>
+
     <string name="event_details_address">Adresa:</string>
     <string name="event_details_date">Datum:</string>
     <string name="event_details_description">Opis</string>
     <string name="event_details_made_by">Izradio:</string>
     <string name="event_details_map">Prikaz na karti</string>
     <string name="event_details_time">Vrijeme:</string>
+
     <string name="ikona_kvacica">Kvačica</string>
+
+    <string name="title_activity_event_details">Informacije</string>
+    <string name="title_activity_event_members">Sudionici</string>
+
     <string name="toast_empty_email">Polje za unos e-mail adrese ne smije biti prazno!</string>
     <string name="toast_empty_registration">Sva polja za registraciju moraju biti popunjena!</string>
     <string name="toast_empty_user_pass">Polja za unos korisničkog imena i lozinke ne smiju biti prazna!</string>
@@ -31,17 +39,17 @@
     <string name="toast_login_success">Prijava uspješna</string>
     <string name="toast_registration_fail">Pojavila se pogreška prilikom registracije!</string>
     <string name="toast_registration_success">Registracija uspješna</string>
+
     <string name="tv_forg_pass">Zaboravljena lozinka?</string>
     <string name="tv_forg_pass_info">Unesite vašu e-mail adresu kako bismo vam poslali novu lozinku:</string>
     <string name="tv_gender">Spol</string>
     <string name="tv_login">PRIJAVA:</string>
     <string name="tv_register">Registrirajte se</string>
+
     <string name="txt_birthday">Rođendan (DD.MM.GGGG)</string>
     <string name="txt_email">E-mail</string>
     <string name="txt_name">Ime</string>
     <string name="txt_password">Lozinka</string>
     <string name="txt_surname">Prezime</string>
     <string name="txt_username">Korisničko ime</string>
-    <string name="title_activity_event_details">Informacije</string>
-
 </resources>
