--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,11 +19,14 @@
     <string name="btn_send_request">Pošalji zahtjev</string>
 
     <string name="event_details_address">Adresa:</string>
-    <string name="event_details_date">Datum:</string>
+    <string name="event_details_creator">Izradio:</string>
     <string name="event_details_description">Opis</string>
-    <string name="event_details_made_by">Izradio:</string>
+    <string name="event_details_end_time">Završetak:</string>
     <string name="event_details_map">Prikaz na karti</string>
-    <string name="event_details_time">Vrijeme:</string>
+    <string name="event_details_start_time">Početak:</string>
+
+    <string name="event_members">Trenutni sudionici:</string>
+    <string name="event_pending">Slobodna mjesta:</string>
 
     <string name="ikona_kvacica">Kvačica</string>
 
